k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: secure-demo
  namespace: security-lab
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: secure-demo
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
